<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="109dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="16dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="275dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="318dp"
        android:layout_height="62dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/text_background"
        android:ems="10"
        android:fontFamily="@font/gotham_bold"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColorHint="#d0d1d4"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="318dp"
        android:layout_height="62dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/text_background"
        android:ems="10"
        android:fontFamily="@font/gotham_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="#d0d1d4"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:layout_width="318dp"
        android:layout_height="62dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/text_background"
        android:ems="10"
        android:fontFamily="@font/gotham_bold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColorHint="#d0d1d4"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPasswordCF"
        android:layout_width="318dp"
        android:layout_height="62dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/text_background"
        android:ems="10"
        android:fontFamily="@font/gotham_bold"
        android:hint="@string/cf_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="#d0d1d4"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/SIGNIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="#1DB954"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="675dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="680dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="620dp"
        app:layout_constraintBottom_toBottomOf="@+id/SIGNIN"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="650dp">

        <TextView
            android:id="@+id/youAlreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_bold"
            android:text="You already have an account?"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="564dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/gotham_bold"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:theme="@style/ButtonTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>